--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Coding Challenge</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -12,25 +13,94 @@
 
 <body>
   <script src="js/script.js"></script>
-  <div class="header">
-    <div>
-        <div class="header__logo">
-
-        </div>
-        <nav>
-            <ul class="nav__list row">
-                <li class="nav__item col"><a class="nav__link" href="main.html">Home</a></li>
-                <li class="nav__item col"><a class="nav__link" href="main.html">About</a></li>
-                <li class="nav__item col"><a class="nav__link" href="main.html">Services</a></li>
-                <li class="nav__item col"><a class="nav__link" href="main.html">News</a></li>
-                <li class="nav__item col"><a class="nav__link" href="main.html">0570 - 020210</a></li>
-                <li class="nav__item col"><a class="nav__link" href="main.html">Contact</a></li>
-            </ul>
-
-            
+  <div class="header" id="header">
+        <div class="header__navbar">
+          <div class="header__navbar--logo">
+            <img src="../codingchallenge/resources/images/diamond.png">
+          </div>
+          <nav>
+            <ul class="row">
+                <li class="col"><a href="main.html">Home</a></li>
+                <li class="col"><a href="main.html">About</a></li>
+                <li class="col"><a href="main.html">Services</a></li>
+                <li class="col-7"><a href="main.html">News</a></li>
+                <li class="col"><a href="main.html">0570 - 020210</a></li>
+                <li class="col"><a href="main.html">Contact</a></li>
+            </ul>   
         </nav>
+        </div>
+
+        
+        <div class="header__text">
+          <div class="header__text--title">
+            <h1>
+              GET YOUR COMPANY MOVING!
+            </h1>
+            <h5>
+              With our basic business WordPress template.
+            </h5>
+          </div>
+          <div class="header__text--body">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed tortor rutrum, auctor erat ac, tempus magna. Curabitur tincidunt, leo eu placerat iaculis, purus mauris fermentum quam, a feugiat odio erat in massa. Mauris ac ultrices mauris, id tincidunt purus. Proin gravida euismod varius.
+            </p>
+
+          </div>
+        </div>
+  </div>
+  <div class="content">
+    <div class="content__about">
+      <div class="content__about--img">
+        <img src="../codingchallenge/resources/images/Pexels photo 2.jpg">
+      </div>
+
+      <div class="content__about--text">
+        <div class="content__about--text--title">
+          <h2>
+            About our company
+          </h2>
+        </div>
+        <div class="content__about--text--body">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis non dapibus libero, quis interdum mi. Pellentesque maximus posuere faucibus. Pellentesque justo nunc, varius sit amet commodo et, mollis quis dui. Quisque ullamcorper orci faucibus elementum ultrices. Sed condimentum sodales dolor. Aliquam erat volutpat. Proin rhoncus mi accumsan, luctus purus eu, dapibus mi. Phasellus et velit in nibh commodo pharetra ut eget leo. Nulla congue ullamcorper condimentum.
+          </p>
+          <h5 style="font-family: 'Open Sans Bold'; color: blue">
+            Lorem Ipsum
+          </h5>
+          <p>
+            Nam imperdiet leo non imperdiet lobortis. Aliquam et mauris iaculis, volutpat velit eu, lacinia mi. Nunc a semper nunc. Morbi ante velit, efficitur sit amet feugiat vel, porttitor vel turpis.
+          </p>
+        </div>
+        <div class="content__about--text--button">
+          <button type="button" class="btn btn-primary btn-lg">Get started!</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="content__services">
+      <div class="content__services--title">
+        <h2>
+          Our services
+        </h2>
+      </div>
+      <div class="content__services--body">
+        <p>
+          We provide some awesome services, check them out!
+        </p>
+      </div>
+    </div>
+    <div class="content_benefits">
 
     </div>
+    <div class="content_news">
+
+    </div>
+    <div class="content__end">
+
+    </div>
+  </div>
+  <div class="footer">
+
   </div>
 </body>
 </html>
