--- a/main.html
+++ b/main.html
@@ -45,62 +45,52 @@
     </div>
   </div>
 
-  <div class="header" id="header">
+  <div id="header" class="header">
     <div class="container">
-      <div class="row header-padding">
+      <div class="row">
         <div class="col-md-6">
-          <div class="header__navbar">
-            <div class="header__navbar--logo">
-              <img src="../codingchallenge/resources/images/diamond.png">
-            </div>
-            <nav class="main-menu">
-              <ul>
-                <li class="main-menu__item"><a href="main.html">Home</a></li>
-                <li class="main-menu__item"><a href="#about">About</a></li>
-                <li class="main-menu__item"><a href="#services">Services</a></li>
-                <li class="main-menu__item"><a href="#news">News</a></li>
-              </ul>
-            </nav>
-          </div>
+          <nav class="header__nav">
+            <img class="header__logo" src="../codingchallenge/resources/images/diamond.png">
+            <ul>
+              <li><a href="main.html">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#news">News</a></li>
+            </ul>
+          </nav>
         </div>
         <div class="col-md-6">
-          <div class="header__navbar" style="float: right;">
-            <nav class="contact-menu">
-              <ul>
-                <li><a href="main.html">0570 - 020210</a></li>
-                <li><a class="contact-button">Contact</a></li>
-              </ul>
-            </nav>
-          </div>
+          <nav class="header__nav">
+            <ul>
+              <li><a href="main.html">0570 - 020210</a></li>
+              <li><a class="header__contactbutton">Contact</a></li>
+            </ul>
+          </nav>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12 col-lg-8">
           <div class="header__text">
-            <div class="header__text--title">
-              <h1>
-                GET YOUR COMPANY MOVING!
-              </h1>
-              <h5>
-                With our basic business WordPress template.
-              </h5>
-            </div>
+            <h1 class="header__title">
+              GET YOUR COMPANY MOVING!
+            </h1>
+            <h5 class="header__subtitle">
+              With our basic business WordPress template.
+            </h5>
             <div class="line">
             </div>
-            <div class="header__text--text">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed tortor rutrum, auctor erat ac, tempus
-                magna.
-                Curabitur tincidunt, leo eu placerat iaculis, purus mauris fermentum quam, a feugiat odio erat in massa.
-                Mauris ac ultrices mauris, id tincidunt purus. Proin gravida euismod varius.
-              </p>
-            </div>
+            <p class="header__content">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed tortor rutrum, auctor erat ac, tempus
+              magna.
+              Curabitur tincidunt, leo eu placerat iaculis, purus mauris fermentum quam, a feugiat odio erat in massa.
+              Mauris ac ultrices mauris, id tincidunt purus. Proin gravida euismod varius.
+            </p>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <div class="scrollbutton">
+          <div class="header__scrollbutton">
             <a href="#about">
               <i class="bi bi-chevron-compact-down" style="font-size: 47px;"></i>
             </a>
@@ -145,7 +135,7 @@
   <div id="services" class="services container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="services__title">
+        <h2 class="services__title services--blue">
           Our services
         </h2>
         <p class="services__subtitle">
@@ -163,9 +153,9 @@
                   <div class="services__img">
                     <img class="img-responsive" src="../codingchallenge/resources/images/refresh.png">
                   </div>
-                  <h2 class="services__title">
+                  <h4 class="services__title">
                     Monthly updates
-                  </h2>
+                  </h4>
                   <p class="services__content">
                     Duis eget tempus augue, ut auctor nunc. Cras pretium tempus ornare. Curabitur dictum
                     pellentesque dapibus. Nunc vitae urna vitae ante fringilla tincidunt. In ante lectus,
@@ -181,9 +171,9 @@
                   <div class="services__img">
                     <img class="img-responsive" src="../codingchallenge/resources/images/verified.png">
                   </div>
-                  <h2 class="services__title">
+                  <h4 class="services__title">
                     Monthly updates
-                  </h2>
+                  </h4>
                   <p class="services__content">
                     Duis eget tempus augue, ut auctor nunc. Cras pretium tempus ornare. Curabitur dictum
                     pellentesque dapibus. Nunc vitae urna vitae ante fringilla tincidunt. In ante lectus,
@@ -199,9 +189,9 @@
                   <div class="services__img">
                     <img class="img-responsive" src="../codingchallenge/resources/images/maintenance.png">
                   </div>
-                  <h2 class="services__title">
+                  <h4 class="services__title">
                     Monthly updates
-                  </h2>
+                  </h4>
                   <p class="services__content">
                     Duis eget tempus augue, ut auctor nunc. Cras pretium tempus ornare. Curabitur dictum
                     pellentesque dapibus. Nunc vitae urna vitae ante fringilla tincidunt. In ante lectus,
