--- a/main.html
+++ b/main.html
@@ -60,7 +60,7 @@
           </nav>
         </div>
         <div class="col-md-6">
-          <nav class="header__nav">
+          <nav class="header__nav header__nav--right">
             <ul>
               <li><a href="main.html">0570 - 020210</a></li>
               <li><a class="header__contactbutton">Contact</a></li>
@@ -77,7 +77,7 @@
             <h5 class="header__subtitle">
               With our basic business WordPress template.
             </h5>
-            <div class="line">
+            <div class="header__line">
             </div>
             <p class="header__content">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed tortor rutrum, auctor erat ac, tempus
@@ -135,7 +135,7 @@
   <div id="services" class="services container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="services__title services--blue">
+        <h2 class="services__title services__title--blue">
           Our services
         </h2>
         <p class="services__subtitle">
@@ -376,14 +376,15 @@
         <div class="col-3">
           <h5 class="footer__title">
             Navigation
-            <h5>
-              <p>
-                Home <br>
-                About<br>
-                Services<br>
-                News<br>
-                Contact
-              </p>
+          </h5>
+          <p>
+            Home <br>
+            About<br>
+            Services<br>
+            News<br>
+            Contact
+          </p>
+              
         </div>
         <div class="col-3">
           <h5 class="footer__title">
