--- a/main.html
+++ b/main.html
@@ -55,7 +55,7 @@
           <nav class="header__nav">
             <img class="header__logo" src="../codingchallenge/resources/images/diamond.png">
             <ul>
-              <li><a href="main.html">Home</a></li>
+              <li class="header__nav--active"><a href="main.html">Home</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#services">Services</a></li>
               <li><a href="#news">News</a></li>
@@ -95,7 +95,11 @@
         <div class="col-md-12">
           <div class="header__scrollbutton">
             <a href="#about">
-              <i class="bi bi-chevron-compact-down" style="font-size: 47px;"></i>
+              <!--<img src="../codingchallenge/resources/images/down-chevron.svg">-->
+              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              viewBox="0 0 407.437 407.437" style="enable-background:new 0 0 407.437 407.437;" xml:space="preserve" fill="#0F54D3">
+              <polygon points="386.258,91.567 203.718,273.512 21.179,91.567 0,112.815 203.718,315.87 407.437,112.815 "/>
+              </svg>
             </a>
           </div>
         </div>
@@ -159,7 +163,7 @@
                   <div class="splide__slide">
                     <div class="services__item">
                       <div class="services__img">
-                        <img class="img-responsive" src="../codingchallenge/resources/images/refresh.png">
+                        <img class="img-responsive" src="../codingchallenge/resources/images/refresh.svg">
                       </div>
                       <h4 class="services__title">
                         Monthly updates
@@ -177,7 +181,7 @@
                   <div class="splide__slide">
                     <div class="services__item">
                       <div class="services__img">
-                        <img class="img-responsive" src="../codingchallenge/resources/images/verified.png">
+                        <img class="img-responsive" src="../codingchallenge/resources/images/verified.svg">
                       </div>
                       <h4 class="services__title">
                         Monthly updates
@@ -195,7 +199,7 @@
                   <div class="splide__slide">
                     <div class="services__item">
                       <div class="services__img">
-                        <img class="img-responsive" src="../codingchallenge/resources/images/maintenance.png">
+                        <img class="img-responsive" src="../codingchallenge/resources/images/tools.svg">
                       </div>
                       <h4 class="services__title">
                         Monthly updates
@@ -251,7 +255,7 @@
                       </p>
                       <a class="news__readmore"href="main.html">
                         Read news article
-                        <i class="bi bi-chevron-compact-right" style="font-size: 16px; font-weight: 800;"></i>
+                        <img src="../codingchallenge/resources/images/right-chevron.svg">
                       </a>
                     </div>
                   </div>
@@ -274,7 +278,7 @@
                       </p>
                       <a class="news__readmore"href="main.html">
                         Read news article
-                        <i class="bi bi-chevron-compact-right" style="font-size: 16px; font-weight: 800;"></i>
+                        <img src="../codingchallenge/resources/images/right-chevron.svg">
                       </a>
                     </div>
                   </div>
@@ -292,12 +296,11 @@
                         10 Tips for more e-commerce inside enterprises like...
                       </p>
                       <p class="news__content">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et malesuada sapien,
-                        vitae tristique justo. Nulla.
+                        Lorem ipsum dolor sit amet.
                       </p>
                       <a class="news__readmore"href="main.html">
                         Read news article
-                        <i class="bi bi-chevron-compact-right" style="font-size: 16px; font-weight: 800;"></i>
+                        <img src="../codingchallenge/resources/images/right-chevron.svg">
                       </a>
                     </div>
                   </div>
@@ -309,18 +312,17 @@
                     </div>
                     <div class="news__text">
                       <p class="news__date">
-                        9 November 2016
+                        Date
                       </p>
                       <p class="news__title">
-                        10 Tips for more e-commerce inside enterprises like...
+                        Title
                       </p>
                       <p class="news__content">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et malesuada sapien,
-                        vitae tristique justo. Nulla.
+                        Content  
                       </p>
                       <a class="news__readmore"href="main.html">
                         Read news article
-                        <i class="bi bi-chevron-compact-right" style="font-size: 16px; font-weight: 800;"></i>
+                        <img src="../codingchallenge/resources/images/right-chevron.svg">
                       </a>
                     </div>
                   </div>
@@ -359,7 +361,7 @@
                 </li>
                 <li class="splide__slide">
                   <p class="testimonials__text">
-                    Spell "stun seed" backwards
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam deleniti corrupti ex dicta rem unde aspernatur saepe velit dolor laborum.
                   </p>
                   <p class="testimonials__author">
                     Tim
@@ -385,7 +387,7 @@
             Maecenas sed diam id risus pharetra fringilla. Nam congue lacinia nibh nec tristique. Duis a leo.
           </p>
         </div>
-        <div class="col-lg-2 col-4">
+        <div class="col-lg-2 col-12">
           <h5 class="footer__title">
             Navigation
           </h5>
@@ -398,7 +400,7 @@
           </p>
               
         </div>
-        <div class="col-lg-2 col-4">
+        <div class="col-lg-2 col-12">
           <h5 class="footer__title">
             Information
           </h5>
@@ -408,7 +410,7 @@
             <a class="footer__link" href="#about">Terms</a>
           </p>
         </div>
-        <div class="col-lg-2 col-4">
+        <div class="col-lg-2 col-12">
           <h5 class="footer__title">
             Contact
           </h5>
@@ -433,16 +435,16 @@
         </div>
         <div class="col-lg">
           <div class="footer__icon">
-            <img class="img-responsive" src="../codingchallenge/resources/images/whatsapp.png">
+            <img class="img-responsive" src="../codingchallenge/resources/images/whatsapp.svg">
           </div>
           <div class="footer__icon">
-            <img class="img-responsive" src="../codingchallenge/resources/images/facebook.png">
+            <img class="img-responsive" src="../codingchallenge/resources/images/facebook.svg">
           </div>
           <div class="footer__icon">
-            <img class="img-responsive" src="../codingchallenge/resources/images/instagram.png">
+            <img class="img-responsive" src="../codingchallenge/resources/images/instagram.svg">
           </div>
           <div class="footer__icon">
-            <img class="img-responsive" src="../codingchallenge/resources/images/twitter.png">
+            <img class="img-responsive" src="../codingchallenge/resources/images/twitter.svg">
           </div>
         </div>
       </div>
@@ -486,7 +488,7 @@
       } else if (elms[i].id === "news-slide") {
         new Splide(elms[i], {
           perPage: 4,
-          gap: 30,
+          gap: 0,
           pagination: false,
           arrows: false,
           drag: false,
