Fix: mobile navbar padding en shadow

--- a/main.html
+++ b/main.html
@@ -68,7 +68,7 @@
           <nav class="header__nav header__nav--right">
             <ul>
               <li><a href="main.html">0570 - 020210</a></li>
-              <li><a class="header__contactbutton">Contact</a></li>
+              <li><a href="main.html" class="header__contactbutton">Contact</a></li>
             </ul>
           </nav>
         </div>
